tests/includes/valid/child.jute
include "base.jute";

module requests {
    class PingRequest {
        common.types.Header header;
        int timeout;
    }

    class AuthRequest {
        common.types.AuthInfo auth;
        boolean readOnly;
    }
}
