tests/includes/invalid/ambigous.jute
include "mod1.jute";
include "mod2.jute";

module test {
    class UsesDuplicate {
        Duplicate value;
    }
}
